--- a/macros.html
+++ b/macros.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8" /
   <title>Macro Breakdown</title>
   <style>
     body {
