--- a/index.html
+++ b/index.html
@@ -2,143 +2,115 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calorie Calculator - Input</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calorie Calculator</title>
   <style>
     body {
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: #fff;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #121212;
+      color: #eee;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
       text-align: center;
-      padding: 40px;
-      direction: rtl;
-      min-height: 100vh;
     }
 
     h1 {
       color: #00ffd5;
-      font-size: 36px;
       margin-bottom: 30px;
-      text-shadow: 0 0 8px #00ffd5;
     }
 
     form {
-      background-color: rgba(0, 0, 0, 0.5);
-      display: inline-block;
-      padding: 30px 40px;
-      border-radius: 15px;
-      box-shadow: 0 0 20px rgba(0, 255, 213, 0.3);
-      max-width: 350px;
-      width: 100%;
+      background-color: #1f1f1f;
+      padding: 25px;
+      border-radius: 12px;
+      max-width: 400px;
+      margin: 0 auto;
+      box-shadow: 0 0 20px rgba(0, 255, 213, 0.4);
       text-align: right;
     }
 
     label {
       display: block;
-      margin-top: 20px;
+      margin: 12px 0 6px 0;
       font-weight: bold;
-      font-size: 16px;
-      color: #a0f4e9;
-      text-shadow: 0 0 4px #00ffd5;
+      color: #00ffd5;
     }
 
-    select,
-    input {
-      margin-top: 8px;
+    input, select {
       width: 100%;
       padding: 10px;
       border-radius: 8px;
       border: none;
       font-size: 16px;
-      background-color: #203a43;
-      color: #fff;
-      box-shadow: inset 0 0 6px #00ffd5;
-      transition: 0.3s;
-    }
-
-    select:hover,
-    input:hover,
-    select:focus,
-    input:focus {
-      background-color: #2c5364;
-      outline: none;
-      box-shadow: 0 0 10px #00ffd5;
+      background-color: #333;
+      color: #eee;
     }
 
     button {
-      margin-top: 30px;
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      font-size: 18px;
       background-color: #00ffd5;
       color: #000;
       border: none;
-      padding: 12px 0;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 12px;
+      border-radius: 10px;
       cursor: pointer;
-      width: 100%;
-      box-shadow: 0 0 15px #00ffd5;
       transition: background-color 0.3s ease;
+      font-weight: bold;
     }
 
     button:hover {
-      background-color: #00c4aa;
+      background-color: #00c9a3;
     }
 
-    .footer {
-      margin-top: 50px;
+    footer {
+      margin-top: 40px;
       font-size: 12px;
-      color: #000;
+      color: black;
+      background-color: #00ffd5;
+      padding: 6px;
+      border-radius: 6px;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
     }
   </style>
 </head>
 <body>
-  <h1>Calorie & Macro Calculator</h1>
+  <h1>Calorie Calculator</h1>
+  <form action="result.html" method="get">
+    <label for="weight">Weight (kg):</label>
+    <input type="number" id="weight" name="weight" min="1" max="300" required />
 
-  <form onsubmit="goToResult(event)">
-    <label for="gender">الجنس:</label>
-    <select id="gender" required>
-      <option value="male">ذكر</option>
-      <option value="female">أنثى</option>
+    <label for="height">Height (cm):</label>
+    <input type="number" id="height" name="height" min="50" max="250" required />
+
+    <label for="age">Age (years):</label>
+    <input type="number" id="age" name="age" min="5" max="120" required />
+
+    <label for="gender">Gender:</label>
+    <select id="gender" name="gender" required>
+      <option value="" disabled selected>Select gender</option>
+      <option value="male">Male</option>
+      <option value="female">Female</option>
     </select>
 
-    <label for="weight">الوزن (كجم):</label>
-    <input type="number" id="weight" required min="1" />
-
-    <label for="height">الطول (سم):</label>
-    <input type="number" id="height" required min="1" />
-
-    <label for="age">العمر:</label>
-    <input type="number" id="age" required min="1" />
-
-    <label for="activity">عدد أيام التمرين أسبوعيًا:</label>
-    <select id="activity" required>
-      <option value="1.2">ما بتمرّنش</option>
-      <option value="1.375">1 - 2 أيام</option>
-      <option value="1.55">3 - 4 أيام</option>
-      <option value="1.725">5 - 6 أيام</option>
-      <option value="1.9">كل يوم تمرين</option>
+    <label for="activity">Activity Level:</label>
+    <select id="activity" name="activity" required>
+      <option value="" disabled selected>Select activity</option>
+      <option value="sedentary">Sedentary (0-1 days/week)</option>
+      <option value="light">Light (1-2 days/week)</option>
+      <option value="moderate">Moderate (3-4 days/week)</option>
+      <option value="active">Active (5-6 days/week)</option>
+      <option value="very_active">Very Active (7 days/week)</option>
     </select>
 
-    <button type="submit">احسب السعرات</button>
+    <button type="submit">Calculate</button>
   </form>
 
-  <div class="footer">Made by Mohab (Instagram: r4_ce)</div>
-
-  <script>
-    function goToResult(e) {
-      e.preventDefault();
-      const gender = document.getElementById('gender').value;
-      const weight = document.getElementById('weight').value;
-      const height = document.getElementById('height').value;
-      const age = document.getElementById('age').value;
-      const activity = document.getElementById('activity').value;
-
-      const params = new URLSearchParams({
-        gender, weight, height, age, activity
-      });
-
-      window.location.href = `result.html?${params.toString()}`;
-    }
-  </script>
+  <footer>
+    Made by Mohab (Instagram: r4_ce)
+  </footer>
 </body>
 </html>
