--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Calorie Calculator</title>
+  <title>Calorie & Macro Calculator - By Mohab</title>
+<meta name="description" content="Accurate calorie and macro calculator for maintenance, bulking, and cutting. Built by Mohab (Instagram: r4_ce)">
+<meta name="keywords" content="calorie calculator, macro calculator, bulking, cutting, maintenance, mohab, r4_ce, fitness, gym, fat loss, lean bulk">
+<meta name="author" content="Mohab">
+<meta name="robots" content="index, follow">
+
   <style>
     body {
       background-color: #121212;
