--- a/result.html
+++ b/result.html
@@ -1,25 +1,35 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Calorie Results</title>
-<title>Calorie & Macro Calculator - By Mohab</title>
-<meta name="description" content="Accurate calorie and macro calculator for maintenance, bulking, and cutting. Built by Mohab (Instagram: r4_ce)">
-<meta name="keywords" content="calorie calculator, macro calculator, bulking, cutting, maintenance, mohab, r4_ce, fitness, gym, fat loss, lean bulk">
-<meta name="author" content="Mohab">
-<meta name="robots" content="index, follow">
-
   <style>
+    :root {
+      --bg-color: #0e0e0e;
+      --text-color: white;
+      --box-bg: #1f1f1f;
+      --accent-color: #00ffd5;
+      --footer-bg: #00ffd5;
+      --footer-text: black;
+    }
+    body.light-mode {
+      --bg-color: #ffffff;
+      --text-color: #000000;
+      --box-bg: #f0f0f0;
+      --accent-color: #00bfa5;
+      --footer-bg: #dddddd;
+      --footer-text: #000000;
+    }
     body {
-      background-color: #0e0e0e;
-      color: white;
+      background-color: var(--bg-color);
+      color: var(--text-color);
       font-family: Arial, sans-serif;
       text-align: center;
       padding: 20px;
+      transition: background-color 0.3s, color 0.3s;
     }
     .result-box {
-      background-color: #1f1f1f;
+      background-color: var(--box-bg);
       padding: 20px;
       border-radius: 10px;
       width: 90%;
@@ -29,7 +39,7 @@
       margin-bottom: 20px;
     }
     h1 {
-      color: #00ffd5;
+      color: var(--accent-color);
       margin-bottom: 20px;
     }
     p, ul {
@@ -38,7 +48,7 @@
     }
     button {
       padding: 10px 20px;
-      background-color: #00ffd5;
+      background-color: var(--accent-color);
       color: #000;
       border: none;
       border-radius: 8px;
@@ -50,16 +60,86 @@
     footer {
       margin-top: 40px;
       font-size: 12px;
-      color: black;
-      background-color: #00ffd5;
+      color: var(--footer-text);
+      background-color: var(--footer-bg);
       padding: 6px;
       border-radius: 6px;
       max-width: 400px;
       margin-left: auto;
       margin-right: auto;
     }
+    .tip-box {
+      margin-top: 20px;
+      font-style: italic;
+      font-size: 14px;
+      padding: 10px;
+      border-radius: 6px;
+      background-color: rgba(0, 255, 213, 0.1);
+    }
+    #toggle-theme, #toggle-language {
+      position: fixed;
+      top: 10px;
+      padding: 6px 10px;
+      background-color: var(--accent-color);
+      color: #000;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      z-index: 999;
+      font-size: 14px;
+      font-weight: bold;
+    }
+    #toggle-theme { right: 10px; }
+    #toggle-language { left: 10px; }
+
+    #learn-more-btn {
+      background-color: #00ffd5;
+      color: #000;
+      font-size: 18px;
+      font-weight: 700;
+      border-radius: 12px;
+      padding: 15px 25px;
+      margin-top: 30px;
+      box-shadow: 0 4px 12px rgba(0, 255, 213, 0.5);
+      transition: background-color 0.3s ease;
+      text-decoration: none;
+      display: inline-block;
+      cursor: pointer;
+    }
+    #learn-more-btn:hover {
+      background-color: #00c9a3;
+      box-shadow: 0 6px 16px rgba(0, 201, 163, 0.7);
+    }
+    #learn-more-text {
+      margin-top: 8px;
+      font-size: 14px;
+      font-style: italic;
+      color: var(--accent-color);
+    }
   </style>
+</head>
+<body>
+  <button id="toggle-theme" onclick="toggleTheme()">Toggle Theme</button>
+  <button id="toggle-language" onclick="toggleLanguage()">عربي</button>
+  <h1 id="title">Calorie Results</h1>
+  <div id="results"></div>
+  <footer>
+    Made by Mohab (Instagram: r4_ce)
+  </footer>
   <script>
+    let currentLang = "en";
+
+    function toggleTheme() {
+      document.body.classList.toggle('light-mode');
+    }
+
+    function toggleLanguage() {
+      currentLang = currentLang === "en" ? "ar" : "en";
+      document.getElementById("toggle-language").innerText = currentLang === "en" ? "عربي" : "English";
+      document.getElementById("title").innerText = currentLang === "en" ? "Calorie Results" : "نتائج السعرات";
+      displayResults();
+    }
+
     function getQueryParams() {
       const params = new URLSearchParams(window.location.search);
       return {
@@ -102,48 +182,62 @@
       const protein = Math.round((calories * 0.3) / 4);
       const carbs = Math.round((calories * 0.4) / 4);
       const fats = Math.round((calories * 0.3) / 9);
-      return `<p><strong>Macros:</strong><br>Protein: ${protein}g | Carbs: ${carbs}g | Fats: ${fats}g</p>`;
+      return `<p><strong>${currentLang === "en" ? "Macros" : "العناصر الغذائية"}:</strong><br>${currentLang === "en" ? "Protein" : "بروتين"}: ${protein}g | ${currentLang === "en" ? "Carbs" : "كارب"}: ${carbs}g | ${currentLang === "en" ? "Fats" : "دهون"}: ${fats}g</p>`;
+    }
+
+    function showTips(calories, maintenance) {
+      let tip = "";
+      if (calories < maintenance * 0.75) {
+        tip = currentLang === "en"
+          ? "⚠️ You are cutting very aggressively. Make sure you maintain proper nutrition and recovery."
+          : "⚠️ أنت تقلل السعرات بشكل قوي جدًا. تأكد من الحفاظ على التغذية والاستشفاء.";
+      } else if (calories > maintenance * 1.25) {
+        tip = currentLang === "en"
+          ? "💥 This is a strong bulk. Monitor your weight weekly to avoid excess fat gain."
+          : "💥 هذا تضخيم قوي. تابع وزنك أسبوعيًا لتجنب زيادة الدهون.";
+      } else if (Math.abs(calories - maintenance) < 100) {
+        tip = currentLang === "en"
+          ? "🔄 You're close to maintenance. Perfect for body recomposition."
+          : "🔄 أنت قريب من سعرات الثبات. مناسب لإعادة تركيب الجسم.";
+      }
+      return tip ? `<div class='tip-box'>${tip}</div>` : "";
     }
 
     function displayResults() {
       const data = getQueryParams();
       if (!data.weight || !data.height || !data.age || !data.gender || !data.activity) {
-        document.getElementById('results').innerHTML = "<p style='color:red;'>Missing or invalid data. Please go back and fill all fields.</p>";
+        document.getElementById('results').innerHTML = `<p style='color:red;'>${currentLang === "en" ? "Missing or invalid data. Please go back and fill all fields." : "يوجد نقص أو خطأ في البيانات. ارجع واملأ جميع الحقول."}</p>`;
         return;
       }
       const calories = calculateCalories(data);
       document.getElementById('results').innerHTML = `
         <div class="result-box">
-          <h2>Maintenance Calories</h2>
+          <h2>${currentLang === "en" ? "Maintenance Calories" : "سعرات الثبات"}</h2>
           <p>${calories.maintenance} kcal</p>
           ${showMacros(calories.maintenance)}
         </div>
         <div class="result-box">
-          <h2>Bulking Calories</h2>
+          <h2>${currentLang === "en" ? "Bulking Calories" : "سعرات التضخيم"}</h2>
           <ul>
-            <li>Light Bulk: ${calories.bulkLight} kcal ${showMacros(calories.bulkLight)}</li>
-            <li>Moderate Bulk: ${calories.bulkModerate} kcal ${showMacros(calories.bulkModerate)}</li>
-            <li>Aggressive Bulk: ${calories.bulkAggressive} kcal ${showMacros(calories.bulkAggressive)}</li>
+            <li>${currentLang === "en" ? "Light Bulk" : "تضخيم خفيف"}: ${calories.bulkLight} kcal ${showMacros(calories.bulkLight)} ${showTips(calories.bulkLight, calories.maintenance)}</li>
+            <li>${currentLang === "en" ? "Moderate Bulk" : "تضخيم متوسط"}: ${calories.bulkModerate} kcal ${showMacros(calories.bulkModerate)} ${showTips(calories.bulkModerate, calories.maintenance)}</li>
+            <li>${currentLang === "en" ? "Aggressive Bulk" : "تضخيم قوي"}: ${calories.bulkAggressive} kcal ${showMacros(calories.bulkAggressive)} ${showTips(calories.bulkAggressive, calories.maintenance)}</li>
           </ul>
         </div>
         <div class="result-box">
-          <h2>Cutting Calories</h2>
+          <h2>${currentLang === "en" ? "Cutting Calories" : "سعرات التنشيف"}</h2>
           <ul>
-            <li>Light Cut: ${calories.cutLight} kcal ${showMacros(calories.cutLight)}</li>
-            <li>Moderate Cut: ${calories.cutModerate} kcal ${showMacros(calories.cutModerate)}</li>
-            <li>Aggressive Cut: ${calories.cutAggressive} kcal ${showMacros(calories.cutAggressive)}</li>
+            <li>${currentLang === "en" ? "Light Cut" : "تنشيف خفيف"}: ${calories.cutLight} kcal ${showMacros(calories.cutLight)} ${showTips(calories.cutLight, calories.maintenance)}</li>
+            <li>${currentLang === "en" ? "Moderate Cut" : "تنشيف متوسط"}: ${calories.cutModerate} kcal ${showMacros(calories.cutModerate)} ${showTips(calories.cutModerate, calories.maintenance)}</li>
+            <li>${currentLang === "en" ? "Aggressive Cut" : "تنشيف قوي"}: ${calories.cutAggressive} kcal ${showMacros(calories.cutAggressive)} ${showTips(calories.cutAggressive, calories.maintenance)}</li>
           </ul>
         </div>
+        <a id="learn-more-btn" href="educate.html">${currentLang === "en" ? "Learn More About Nutrition" : "تعلم المزيد عن التغذية"}</a>
+        <div id="learn-more-text">${currentLang === "en" ? "Click above to get clear, simple nutrition guidance!" : "اضغط أعلاه للحصول على نصائح غذائية واضحة وبسيطة!"}</div>
       `;
     }
+
     window.onload = displayResults;
   </script>
-</head>
-<body>
-  <h1>Calorie Results</h1>
-  <div id="results"></div>
-  <footer>
-    Made by Mohab (Instagram: r4_ce)
-  </footer>
 </body>
 </html>
