--- a/result.html
+++ b/result.html
@@ -124,8 +124,8 @@
   <h1 id="title">Calorie Results</h1>
   <div id="results"></div>
   <footer>
-    Made by Mohab (Instagram: r4_ce)
-  </footer>
+  Made by Mohab (<a href="https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2" target="_blank" style="color: blue; text-decoration: underline;">@r4_ce</a>)
+</footer>
   <script>
     let currentLang = "en";
 
