--- a/bmr.html
+++ b/bmr.html
@@ -107,8 +107,8 @@
   </div>
 
   <footer>
-    Made by Mohab (Instagram: r4_ce)
-  </footer>
+  Made by Mohab (<a href="https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2" target="_blank" style="color: blue; text-decoration: underline;">@r4_ce</a>)
+</footer>
 
   <script>
     let isArabic = false;
