--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
 
     <button type="submit" id="btn-calculate">Calculate</button>
   </form>
+<footer>
+  Made by Mohab (<a href="https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2" target="_blank" style="color: blue; text-decoration: underline;">@r4_ce</a>)
+</footer>
 
-  <footer>
-    Made by Mohab (Instagram: r4_ce)
-  </footer>
-
+ 
   <script>
     function toggleTheme() {
       document.body.classList.toggle('light-mode');
