--- a/macro-guide.html
+++ b/macro-guide.html
@@ -112,7 +112,10 @@
     <p>تقسيم شائع: 40% كارب، 30% بروتين، 30% دهون — لكن ممكن تعدله حسب هدفك (تضخيم، تنشيف، أداء رياضي).</p>
   </div>
 
-  <footer>Made by Mohab (Instagram: r4_ce)</footer>
+ <footer>
+  Made by Mohab (<a href="https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2" target="_blank" style="color: blue; text-decoration: underline;">@r4_ce</a>)
+</footer>
+
 
   <script>
     function toggleTheme() {
