--- a/meal-plan.html
+++ b/meal-plan.html
@@ -106,9 +106,9 @@
     <p><strong>🔁 Bonus Tip</strong><br>Be flexible! You can enjoy occasional treats – just make sure they fit your daily macros. This is called <em>Flexible Dieting</em>.</p>
   </div>
 
-  <footer>
-    Made by Mohab (Instagram: r4_ce)
-  </footer>
+ <footer>
+  Made by Mohab (<a href="https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2" target="_blank" style="color: blue; text-decoration: underline;">@r4_ce</a>)
+</footer>
 
   <script>
     let isArabic = false;
