--- a/meal-plan.html
+++ b/meal-plan.html
@@ -106,9 +106,24 @@
     <p><strong>🔁 Bonus Tip</strong><br>Be flexible! You can enjoy occasional treats – just make sure they fit your daily macros. This is called <em>Flexible Dieting</em>.</p>
   </div>
 
- <footer>
-  Made by Mohab (<a href="https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2" target="_blank" style="color: blue; text-decoration: underline;">@r4_ce</a>)
+<footer>
+  Made by Mohab (
+    <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
+  )
 </footer>
+
+<script>
+  function openInstagram() {
+    const appLink = "instagram://user?username=r4_ce";
+    const webLink = "https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
+
+    // يحاول يفتح التطبيق، ولو ما اشتغل يفتح الموقع بعد شويه
+    window.location = appLink;
+    setTimeout(() => {
+      window.location = webLink;
+    }, 1500); // 1.5 ثانية لو التطبيق مش موجود
+  }
+</script>
 
   <script>
     let isArabic = false;
