--- a/result.html
+++ b/result.html
@@ -91,7 +91,6 @@
     }
     #toggle-theme { right: 10px; }
     #toggle-language { left: 10px; }
-
     #learn-more-btn {
       background-color: #00ffd5;
       color: #000;
@@ -124,23 +123,20 @@
   <h1 id="title">Calorie Results</h1>
   <div id="results"></div>
   <footer>
-  Made by Mohab (
-    <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
-  )
-</footer>
-
-<script>
-  function openInstagram() {
-    const appLink = "instagram://user?username=r4_ce";
-    const webLink = "https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
-
-    // يحاول يفتح التطبيق، ولو ما اشتغل يفتح الموقع بعد شويه
-    window.location = appLink;
-    setTimeout(() => {
-      window.location = webLink;
-    }, 1500); // 1.5 ثانية لو التطبيق مش موجود
-  }
-</script>
+    Made by Mohab (
+      <a href="#" onclick="openInstagram()" style="color: blue; text-decoration: underline;">@r4_ce</a>
+    )
+  </footer>
+  <script>
+    function openInstagram() {
+      const appLink = "instagram://user?username=r4_ce";
+      const webLink = "https://www.instagram.com/r4_ce?igsh=Z2x3NWJxOG52cjN2";
+      window.location = appLink;
+      setTimeout(() => {
+        window.location = webLink;
+      }, 1500);
+    }
+  </script>
   <script>
     let currentLang = "en";
 
@@ -166,56 +162,37 @@
       };
     }
 
-    function calculateCalories(data) {
-      const { weight, height, age, gender, activity } = data;
-      let bmr;
+    function calculateBMR({ weight, height, age, gender }) {
       if (gender === 'male') {
-        bmr = 10 * weight + 6.25 * height - 5 * age + 5;
+        return 10 * weight + 6.25 * height - 5 * age + 5;
       } else {
-        bmr = 10 * weight + 6.25 * height - 5 * age - 161;
+        return 10 * weight + 6.25 * height - 5 * age - 161;
       }
-      const activityMultipliers = {
+    }
+
+    function getActivityMultiplier(activity) {
+      const multipliers = {
         sedentary: 1.2,
         light: 1.375,
         moderate: 1.55,
         active: 1.725,
         very_active: 1.9,
       };
-      const maintenanceCalories = bmr * (activityMultipliers[activity] || 1.2);
-      return {
-        maintenance: Math.round(maintenanceCalories),
-        bulkLight: Math.round(maintenanceCalories * 1.1),
-        bulkModerate: Math.round(maintenanceCalories * 1.2),
-        bulkAggressive: Math.round(maintenanceCalories * 1.3),
-        cutLight: Math.round(maintenanceCalories * 0.9),
-        cutModerate: Math.round(maintenanceCalories * 0.8),
-        cutAggressive: Math.round(maintenanceCalories * 0.7),
-      };
+      return multipliers[activity] || 1.2;
     }
 
-    function showMacros(calories) {
-      const protein = Math.round((calories * 0.3) / 4);
-      const carbs = Math.round((calories * 0.4) / 4);
-      const fats = Math.round((calories * 0.3) / 9);
-      return `<p><strong>${currentLang === "en" ? "Macros" : "العناصر الغذائية"}:</strong><br>${currentLang === "en" ? "Protein" : "بروتين"}: ${protein}g | ${currentLang === "en" ? "Carbs" : "كارب"}: ${carbs}g | ${currentLang === "en" ? "Fats" : "دهون"}: ${fats}g</p>`;
+    function calculateMacros(calories, weight, proteinPerKg) {
+      const protein = Math.round(weight * proteinPerKg);
+      const proteinCals = protein * 4;
+      const fatCals = calories * 0.25;
+      const fats = Math.round(fatCals / 9);
+      const carbs = Math.round((calories - proteinCals - fatCals) / 4);
+      return { protein, carbs, fats };
     }
 
-    function showTips(calories, maintenance) {
-      let tip = "";
-      if (calories < maintenance * 0.75) {
-        tip = currentLang === "en"
-          ? "⚠️ You are cutting very aggressively. Make sure you maintain proper nutrition and recovery."
-          : "⚠️ أنت تقلل السعرات بشكل قوي جدًا. تأكد من الحفاظ على التغذية والاستشفاء.";
-      } else if (calories > maintenance * 1.25) {
-        tip = currentLang === "en"
-          ? "💥 This is a strong bulk. Monitor your weight weekly to avoid excess fat gain."
-          : "💥 هذا تضخيم قوي. تابع وزنك أسبوعيًا لتجنب زيادة الدهون.";
-      } else if (Math.abs(calories - maintenance) < 100) {
-        tip = currentLang === "en"
-          ? "🔄 You're close to maintenance. Perfect for body recomposition."
-          : "🔄 أنت قريب من سعرات الثبات. مناسب لإعادة تركيب الجسم.";
-      }
-      return tip ? `<div class='tip-box'>${tip}</div>` : "";
+    function showMacros(calories, weight, proteinPerKg) {
+      const { protein, carbs, fats } = calculateMacros(calories, weight, proteinPerKg);
+      return `<p><strong>🍽️ ${currentLang === "en" ? "Macros" : "العناصر الغذائية"}:</strong><br>🥩 ${currentLang === "en" ? "Protein" : "بروتين"}: ${protein}g | 🍚 ${currentLang === "en" ? "Carbs" : "كارب"}: ${carbs}g | 🥑 ${currentLang === "en" ? "Fats" : "دهون"}: ${fats}g</p>`;
     }
 
     function displayResults() {
@@ -224,27 +201,37 @@
         document.getElementById('results').innerHTML = `<p style='color:red;'>${currentLang === "en" ? "Missing or invalid data. Please go back and fill all fields." : "يوجد نقص أو خطأ في البيانات. ارجع واملأ جميع الحقول."}</p>`;
         return;
       }
-      const calories = calculateCalories(data);
+      const bmr = calculateBMR(data);
+      const tdee = bmr * getActivityMultiplier(data.activity);
+
+      const bulkLight = Math.round(tdee * 1.1);
+      const bulkModerate = Math.round(tdee * 1.2);
+      const bulkAggressive = Math.round(tdee * 1.3);
+
+      const cutLight = Math.round(tdee * 0.9);
+      const cutModerate = Math.round(tdee * 0.8);
+      const cutAggressive = Math.round(tdee * 0.7);
+
       document.getElementById('results').innerHTML = `
         <div class="result-box">
-          <h2>${currentLang === "en" ? "Maintenance Calories" : "سعرات الثبات"}</h2>
-          <p>${calories.maintenance} kcal</p>
-          ${showMacros(calories.maintenance)}
+          <h2>⚖️ ${currentLang === "en" ? "Maintenance Calories" : "سعرات الثبات"}</h2>
+          <p>${Math.round(tdee)} kcal</p>
+          ${showMacros(tdee, data.weight, 1.9)}
         </div>
         <div class="result-box">
-          <h2>${currentLang === "en" ? "Bulking Calories" : "سعرات التضخيم"}</h2>
+          <h2>💪 ${currentLang === "en" ? "Bulking Calories" : "سعرات التضخيم"}</h2>
           <ul>
-            <li>${currentLang === "en" ? "Light Bulk" : "تضخيم خفيف"}: ${calories.bulkLight} kcal ${showMacros(calories.bulkLight)} ${showTips(calories.bulkLight, calories.maintenance)}</li>
-            <li>${currentLang === "en" ? "Moderate Bulk" : "تضخيم متوسط"}: ${calories.bulkModerate} kcal ${showMacros(calories.bulkModerate)} ${showTips(calories.bulkModerate, calories.maintenance)}</li>
-            <li>${currentLang === "en" ? "Aggressive Bulk" : "تضخيم قوي"}: ${calories.bulkAggressive} kcal ${showMacros(calories.bulkAggressive)} ${showTips(calories.bulkAggressive, calories.maintenance)}</li>
+            <li>🍽️ ${currentLang === "en" ? "Light Bulk" : "تضخيم خفيف"}: ${bulkLight} kcal ${showMacros(bulkLight, data.weight, 1.8)} <br>📈 ${currentLang === "en" ? "Expected weekly gain" : "الزيادة المتوقعة أسبوعيًا"}: ${(data.weight * 0.003).toFixed(2)} kg</li>
+            <li>🍗 ${currentLang === "en" ? "Moderate Bulk" : "تضخيم متوسط"}: ${bulkModerate} kcal ${showMacros(bulkModerate, data.weight, 1.8)} <br>📈 ${currentLang === "en" ? "Expected weekly gain" : "الزيادة المتوقعة أسبوعيًا"}: ${(data.weight * 0.004).toFixed(2)} kg</li>
+            <li>🔥 ${currentLang === "en" ? "Aggressive Bulk" : "تضخيم قوي"}: ${bulkAggressive} kcal ${showMacros(bulkAggressive, data.weight, 1.8)} <br>📈 ${currentLang === "en" ? "Expected weekly gain" : "الزيادة المتوقعة أسبوعيًا"}: ${(data.weight * 0.005).toFixed(2)} kg</li>
           </ul>
         </div>
         <div class="result-box">
-          <h2>${currentLang === "en" ? "Cutting Calories" : "سعرات التنشيف"}</h2>
+          <h2>🏋️‍♂️ ${currentLang === "en" ? "Cutting Calories" : "سعرات التنشيف"}</h2>
           <ul>
-            <li>${currentLang === "en" ? "Light Cut" : "تنشيف خفيف"}: ${calories.cutLight} kcal ${showMacros(calories.cutLight)} ${showTips(calories.cutLight, calories.maintenance)}</li>
-            <li>${currentLang === "en" ? "Moderate Cut" : "تنشيف متوسط"}: ${calories.cutModerate} kcal ${showMacros(calories.cutModerate)} ${showTips(calories.cutModerate, calories.maintenance)}</li>
-            <li>${currentLang === "en" ? "Aggressive Cut" : "تنشيف قوي"}: ${calories.cutAggressive} kcal ${showMacros(calories.cutAggressive)} ${showTips(calories.cutAggressive, calories.maintenance)}</li>
+            <li>🥗 ${currentLang === "en" ? "Light Cut" : "تنشيف خفيف"}: ${cutLight} kcal ${showMacros(cutLight, data.weight, 2.0)} <br>📉 ${currentLang === "en" ? "Expected weekly loss" : "النزول المتوقع أسبوعيًا"}: ${(data.weight * 0.005).toFixed(2)} kg</li>
+            <li>🥬 ${currentLang === "en" ? "Moderate Cut" : "تنشيف متوسط"}: ${cutModerate} kcal ${showMacros(cutModerate, data.weight, 2.0)} <br>📉 ${currentLang === "en" ? "Expected weekly loss" : "النزول المتوقع أسبوعيًا"}: ${(data.weight * 0.007).toFixed(2)} kg</li>
+            <li>🧨 ${currentLang === "en" ? "Aggressive Cut" : "تنشيف قوي"}: ${cutAggressive} kcal ${showMacros(cutAggressive, data.weight, 2.0)} <br>📉 ${currentLang === "en" ? "Expected weekly loss" : "النزول المتوقع أسبوعيًا"}: ${(data.weight * 0.009).toFixed(2)} kg</li>
           </ul>
         </div>
         <a id="learn-more-btn" href="educate.html">${currentLang === "en" ? "Learn More About Nutrition" : "تعلم المزيد عن التغذية"}</a>
